rubrics/shared/ucum_parser.js
module.exports = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "sign": parse_sign,
        "digit": parse_digit,
        "digits": parse_digits,
        "exponent": parse_exponent,
        "simpleUnit": parse_simpleUnit,
        "annotatable": parse_annotatable,
        "component": parse_component,
        "term": parse_term,
        "annotation": parse_annotation,
        "ATOM": parse_ATOM,
        "METRICATOM": parse_METRICATOM,
        "PREFIX": parse_PREFIX
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "term";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_sign() {
        var result0;
        
        if (/^[+\-]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[+\\-]");
          }
        }
        return result0;
      }
      
      function parse_digit() {
        var result0;
        
        if (/^[0-9]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[0-9]");
          }
        }
        return result0;
      }
      
      function parse_digits() {
        var result0, result1;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_digit();
        if (result0 !== null) {
          result1 = parse_digits();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, d, dd) {return d+dd;})(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          result0 = parse_digit();
        }
        return result0;
      }
      
      function parse_exponent() {
        var result0, result1;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_sign();
        if (result0 !== null) {
          result1 = parse_digits();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, s, d) {return "e"+s+d})(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          result0 = parse_digits();
          if (result0 !== null) {
            result0 = (function(offset, d) {return "e"+d})(pos0, result0);
          }
          if (result0 === null) {
            pos = pos0;
          }
        }
        return result0;
      }
      
      function parse_simpleUnit() {
        var result0, result1;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_PREFIX();
        if (result0 !== null) {
          result1 = parse_METRICATOM();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, p, m) {
          var val = {
          'Y': 24,
          'Z': 21,
          'E': 18,
          'P': 15,
          'T': 12,
          'G': 9,
          'M': 6,
          'k': 3,
          'h': 2,
          'da': 1,
          'd': -1,
          'c': -2,
          'm': -3,
          'u': -6,
          'n': -9,
          'p': -12,
          'f': -15,
          'a': -18,
          'z': -21,
          'y': -24
        };
          return  m+val[p]
        })(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          result0 = parse_ATOM();
          if (result0 === null) {
            result0 = parse_METRICATOM();
            if (result0 === null) {
              result0 = parse_digits();
            }
          }
        }
        return result0;
      }
      
      function parse_annotatable() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result0 = parse_simpleUnit();
        if (result0 !== null) {
          result1 = parse_exponent();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        if (result0 === null) {
          result0 = parse_simpleUnit();
        }
        return result0;
      }
      
      function parse_component() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = pos;
        result0 = parse_annotatable();
        if (result0 !== null) {
          result1 = parse_annotation();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        if (result0 === null) {
          result0 = parse_annotatable();
          if (result0 === null) {
            result0 = parse_annotation();
            if (result0 === null) {
              result0 = parse_digits();
              if (result0 === null) {
                pos0 = pos;
                if (input.charCodeAt(pos) === 40) {
                  result0 = "(";
                  pos++;
                } else {
                  result0 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"(\"");
                  }
                }
                if (result0 !== null) {
                  result1 = parse_term();
                  if (result1 !== null) {
                    if (input.charCodeAt(pos) === 41) {
                      result2 = ")";
                      pos++;
                    } else {
                      result2 = null;
                      if (reportFailures === 0) {
                        matchFailed("\")\"");
                      }
                    }
                    if (result2 !== null) {
                      result0 = [result0, result1, result2];
                    } else {
                      result0 = null;
                      pos = pos0;
                    }
                  } else {
                    result0 = null;
                    pos = pos0;
                  }
                } else {
                  result0 = null;
                  pos = pos0;
                }
              }
            }
          }
        }
        return result0;
      }
      
      function parse_term() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = pos;
        if (input.charCodeAt(pos) === 47) {
          result0 = "/";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"/\"");
          }
        }
        if (result0 !== null) {
          result1 = parse_component();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          result0 = parse_component();
          if (result0 !== null) {
            if (input.charCodeAt(pos) === 46) {
              result1 = ".";
              pos++;
            } else {
              result1 = null;
              if (reportFailures === 0) {
                matchFailed("\".\"");
              }
            }
            if (result1 !== null) {
              result2 = parse_term();
              if (result2 !== null) {
                result0 = [result0, result1, result2];
              } else {
                result0 = null;
                pos = pos0;
              }
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
          if (result0 === null) {
            pos0 = pos;
            result0 = parse_component();
            if (result0 !== null) {
              if (input.charCodeAt(pos) === 47) {
                result1 = "/";
                pos++;
              } else {
                result1 = null;
                if (reportFailures === 0) {
                  matchFailed("\"/\"");
                }
              }
              if (result1 !== null) {
                result2 = parse_term();
                if (result2 !== null) {
                  result0 = [result0, result1, result2];
                } else {
                  result0 = null;
                  pos = pos0;
                }
              } else {
                result0 = null;
                pos = pos0;
              }
            } else {
              result0 = null;
              pos = pos0;
            }
            if (result0 === null) {
              result0 = parse_component();
            }
          }
        }
        return result0;
      }
      
      function parse_annotation() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        if (input.charCodeAt(pos) === 123) {
          result0 = "{";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"{\"");
          }
        }
        if (result0 !== null) {
          if (/^[^}]/.test(input.charAt(pos))) {
            result2 = input.charAt(pos);
            pos++;
          } else {
            result2 = null;
            if (reportFailures === 0) {
              matchFailed("[^}]");
            }
          }
          if (result2 !== null) {
            result1 = [];
            while (result2 !== null) {
              result1.push(result2);
              if (/^[^}]/.test(input.charAt(pos))) {
                result2 = input.charAt(pos);
                pos++;
              } else {
                result2 = null;
                if (reportFailures === 0) {
                  matchFailed("[^}]");
                }
              }
            }
          } else {
            result1 = null;
          }
          if (result1 !== null) {
            if (input.charCodeAt(pos) === 125) {
              result2 = "}";
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"}\"");
              }
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, m) {return "{"+m.join("")+"}"})(pos0, result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ATOM() {
        var result0;
        
        if (input.substr(pos, 3) === "10*") {
          result0 = "10*";
          pos += 3;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"10*\"");
          }
        }
        if (result0 === null) {
          if (input.substr(pos, 3) === "10^") {
            result0 = "10^";
            pos += 3;
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"10^\"");
            }
          }
          if (result0 === null) {
            if (input.substr(pos, 4) === "[pi]") {
              result0 = "[pi]";
              pos += 4;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"[pi]\"");
              }
            }
            if (result0 === null) {
              if (input.charCodeAt(pos) === 37) {
                result0 = "%";
                pos++;
              } else {
                result0 = null;
                if (reportFailures === 0) {
                  matchFailed("\"%\"");
                }
              }
              if (result0 === null) {
                if (input.substr(pos, 6) === "[ppth]") {
                  result0 = "[ppth]";
                  pos += 6;
                } else {
                  result0 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"[ppth]\"");
                  }
                }
                if (result0 === null) {
                  if (input.substr(pos, 6) === "[pppm]") {
                    result0 = "[pppm]";
                    pos += 6;
                  } else {
                    result0 = null;
                    if (reportFailures === 0) {
                      matchFailed("\"[pppm]\"");
                    }
                  }
                  if (result0 === null) {
                    if (input.substr(pos, 5) === "bit_s") {
                      result0 = "bit_s";
                      pos += 5;
                    } else {
                      result0 = null;
                      if (reportFailures === 0) {
                        matchFailed("\"bit_s\"");
                      }
                    }
                    if (result0 === null) {
                      if (input.substr(pos, 2) === "Ao") {
                        result0 = "Ao";
                        pos += 2;
                      } else {
                        result0 = null;
                        if (reportFailures === 0) {
                          matchFailed("\"Ao\"");
                        }
                      }
                      if (result0 === null) {
                        if (input.charCodeAt(pos) === 98) {
                          result0 = "b";
                          pos++;
                        } else {
                          result0 = null;
                          if (reportFailures === 0) {
                            matchFailed("\"b\"");
                          }
                        }
                        if (result0 === null) {
                          if (input.substr(pos, 3) === "att") {
                            result0 = "att";
                            pos += 3;
                          } else {
                            result0 = null;
                            if (reportFailures === 0) {
                              matchFailed("\"att\"");
                            }
                          }
                          if (result0 === null) {
                            if (input.substr(pos, 5) === "[psi]") {
                              result0 = "[psi]";
                              pos += 5;
                            } else {
                              result0 = null;
                              if (reportFailures === 0) {
                                matchFailed("\"[psi]\"");
                              }
                            }
                            if (result0 === null) {
                              if (input.substr(pos, 4) === "circ") {
                                result0 = "circ";
                                pos += 4;
                              } else {
                                result0 = null;
                                if (reportFailures === 0) {
                                  matchFailed("\"circ\"");
                                }
                              }
                              if (result0 === null) {
                                if (input.substr(pos, 3) === "sph") {
                                  result0 = "sph";
                                  pos += 3;
                                } else {
                                  result0 = null;
                                  if (reportFailures === 0) {
                                    matchFailed("\"sph\"");
                                  }
                                }
                                if (result0 === null) {
                                  if (input.substr(pos, 7) === "[car_m]") {
                                    result0 = "[car_m]";
                                    pos += 7;
                                  } else {
                                    result0 = null;
                                    if (reportFailures === 0) {
                                      matchFailed("\"[car_m]\"");
                                    }
                                  }
                                  if (result0 === null) {
                                    if (input.substr(pos, 8) === "[car_Au]") {
                                      result0 = "[car_Au]";
                                      pos += 8;
                                    } else {
                                      result0 = null;
                                      if (reportFailures === 0) {
                                        matchFailed("\"[car_Au]\"");
                                      }
                                    }
                                    if (result0 === null) {
                                      if (input.substr(pos, 7) === "[smoot]") {
                                        result0 = "[smoot]";
                                        pos += 7;
                                      } else {
                                        result0 = null;
                                        if (reportFailures === 0) {
                                          matchFailed("\"[smoot]\"");
                                        }
                                      }
                                      if (result0 === null) {
                                        if (input.substr(pos, 4) === "[pH]") {
                                          result0 = "[pH]";
                                          pos += 4;
                                        } else {
                                          result0 = null;
                                          if (reportFailures === 0) {
                                            matchFailed("\"[pH]\"");
                                          }
                                        }
                                        if (result0 === null) {
                                          if (input.substr(pos, 3) === "[S]") {
                                            result0 = "[S]";
                                            pos += 3;
                                          } else {
                                            result0 = null;
                                            if (reportFailures === 0) {
                                              matchFailed("\"[S]\"");
                                            }
                                          }
                                          if (result0 === null) {
                                            if (input.substr(pos, 5) === "[HPF]") {
                                              result0 = "[HPF]";
                                              pos += 5;
                                            } else {
                                              result0 = null;
                                              if (reportFailures === 0) {
                                                matchFailed("\"[HPF]\"");
                                              }
                                            }
                                            if (result0 === null) {
                                              if (input.substr(pos, 5) === "[LPF]") {
                                                result0 = "[LPF]";
                                                pos += 5;
                                              } else {
                                                result0 = null;
                                                if (reportFailures === 0) {
                                                  matchFailed("\"[LPF]\"");
                                                }
                                              }
                                              if (result0 === null) {
                                                if (input.substr(pos, 7) === "[arb'U]") {
                                                  result0 = "[arb'U]";
                                                  pos += 7;
                                                } else {
                                                  result0 = null;
                                                  if (reportFailures === 0) {
                                                    matchFailed("\"[arb'U]\"");
                                                  }
                                                }
                                                if (result0 === null) {
                                                  if (input.substr(pos, 7) === "[USP'U]") {
                                                    result0 = "[USP'U]";
                                                    pos += 7;
                                                  } else {
                                                    result0 = null;
                                                    if (reportFailures === 0) {
                                                      matchFailed("\"[USP'U]\"");
                                                    }
                                                  }
                                                  if (result0 === null) {
                                                    if (input.substr(pos, 7) === "[GPL'U]") {
                                                      result0 = "[GPL'U]";
                                                      pos += 7;
                                                    } else {
                                                      result0 = null;
                                                      if (reportFailures === 0) {
                                                        matchFailed("\"[GPL'U]\"");
                                                      }
                                                    }
                                                    if (result0 === null) {
                                                      if (input.substr(pos, 7) === "[MPL'U]") {
                                                        result0 = "[MPL'U]";
                                                        pos += 7;
                                                      } else {
                                                        result0 = null;
                                                        if (reportFailures === 0) {
                                                          matchFailed("\"[MPL'U]\"");
                                                        }
                                                      }
                                                      if (result0 === null) {
                                                        if (input.substr(pos, 7) === "[APL'U]") {
                                                          result0 = "[APL'U]";
                                                          pos += 7;
                                                        } else {
                                                          result0 = null;
                                                          if (reportFailures === 0) {
                                                            matchFailed("\"[APL'U]\"");
                                                          }
                                                        }
                                                        if (result0 === null) {
                                                          if (input.substr(pos, 8) === "[beth'U]") {
                                                            result0 = "[beth'U]";
                                                            pos += 8;
                                                          } else {
                                                            result0 = null;
                                                            if (reportFailures === 0) {
                                                              matchFailed("\"[beth'U]\"");
                                                            }
                                                          }
                                                          if (result0 === null) {
                                                            if (input.substr(pos, 8) === "[todd'U]") {
                                                              result0 = "[todd'U]";
                                                              pos += 8;
                                                            } else {
                                                              result0 = null;
                                                              if (reportFailures === 0) {
                                                                matchFailed("\"[todd'U]\"");
                                                              }
                                                            }
                                                            if (result0 === null) {
                                                              if (input.substr(pos, 7) === "[dye'U]") {
                                                                result0 = "[dye'U]";
                                                                pos += 7;
                                                              } else {
                                                                result0 = null;
                                                                if (reportFailures === 0) {
                                                                  matchFailed("\"[dye'U]\"");
                                                                }
                                                              }
                                                              if (result0 === null) {
                                                                if (input.substr(pos, 8) === "[smgy'U]") {
                                                                  result0 = "[smgy'U]";
                                                                  pos += 8;
                                                                } else {
                                                                  result0 = null;
                                                                  if (reportFailures === 0) {
                                                                    matchFailed("\"[smgy'U]\"");
                                                                  }
                                                                }
                                                                if (result0 === null) {
                                                                  if (input.substr(pos, 8) === "[bdsk'U]") {
                                                                    result0 = "[bdsk'U]";
                                                                    pos += 8;
                                                                  } else {
                                                                    result0 = null;
                                                                    if (reportFailures === 0) {
                                                                      matchFailed("\"[bdsk'U]\"");
                                                                    }
                                                                  }
                                                                  if (result0 === null) {
                                                                    if (input.substr(pos, 6) === "[ka'U]") {
                                                                      result0 = "[ka'U]";
                                                                      pos += 6;
                                                                    } else {
                                                                      result0 = null;
                                                                      if (reportFailures === 0) {
                                                                        matchFailed("\"[ka'U]\"");
                                                                      }
                                                                    }
                                                                    if (result0 === null) {
                                                                      if (input.substr(pos, 7) === "[knk'U]") {
                                                                        result0 = "[knk'U]";
                                                                        pos += 7;
                                                                      } else {
                                                                        result0 = null;
                                                                        if (reportFailures === 0) {
                                                                          matchFailed("\"[knk'U]\"");
                                                                        }
                                                                      }
                                                                      if (result0 === null) {
                                                                        if (input.substr(pos, 8) === "[mclg'U]") {
                                                                          result0 = "[mclg'U]";
                                                                          pos += 8;
                                                                        } else {
                                                                          result0 = null;
                                                                          if (reportFailures === 0) {
                                                                            matchFailed("\"[mclg'U]\"");
                                                                          }
                                                                        }
                                                                        if (result0 === null) {
                                                                          if (input.substr(pos, 6) === "[tb'U]") {
                                                                            result0 = "[tb'U]";
                                                                            pos += 6;
                                                                          } else {
                                                                            result0 = null;
                                                                            if (reportFailures === 0) {
                                                                              matchFailed("\"[tb'U]\"");
                                                                            }
                                                                          }
                                                                          if (result0 === null) {
                                                                            if (input.substr(pos, 9) === "[CCID_50]") {
                                                                              result0 = "[CCID_50]";
                                                                              pos += 9;
                                                                            } else {
                                                                              result0 = null;
                                                                              if (reportFailures === 0) {
                                                                                matchFailed("\"[CCID_50]\"");
                                                                              }
                                                                            }
                                                                            if (result0 === null) {
                                                                              if (input.substr(pos, 9) === "[TCID_50]") {
                                                                                result0 = "[TCID_50]";
                                                                                pos += 9;
                                                                              } else {
                                                                                result0 = null;
                                                                                if (reportFailures === 0) {
                                                                                  matchFailed("\"[TCID_50]\"");
                                                                                }
                                                                              }
                                                                              if (result0 === null) {
                                                                                if (input.substr(pos, 5) === "[PFU]") {
                                                                                  result0 = "[PFU]";
                                                                                  pos += 5;
                                                                                } else {
                                                                                  result0 = null;
                                                                                  if (reportFailures === 0) {
                                                                                    matchFailed("\"[PFU]\"");
                                                                                  }
                                                                                }
                                                                                if (result0 === null) {
                                                                                  if (input.substr(pos, 5) === "[FFU]") {
                                                                                    result0 = "[FFU]";
                                                                                    pos += 5;
                                                                                  } else {
                                                                                    result0 = null;
                                                                                    if (reportFailures === 0) {
                                                                                      matchFailed("\"[FFU]\"");
                                                                                    }
                                                                                  }
                                                                                  if (result0 === null) {
                                                                                    if (input.substr(pos, 5) === "[CFU]") {
                                                                                      result0 = "[CFU]";
                                                                                      pos += 5;
                                                                                    } else {
                                                                                      result0 = null;
                                                                                      if (reportFailures === 0) {
                                                                                        matchFailed("\"[CFU]\"");
                                                                                      }
                                                                                    }
                                                                                    if (result0 === null) {
                                                                                      if (input.substr(pos, 5) === "[BAU]") {
                                                                                        result0 = "[BAU]";
                                                                                        pos += 5;
                                                                                      } else {
                                                                                        result0 = null;
                                                                                        if (reportFailures === 0) {
                                                                                          matchFailed("\"[BAU]\"");
                                                                                        }
                                                                                      }
                                                                                      if (result0 === null) {
                                                                                        if (input.substr(pos, 4) === "[AU]") {
                                                                                          result0 = "[AU]";
                                                                                          pos += 4;
                                                                                        } else {
                                                                                          result0 = null;
                                                                                          if (reportFailures === 0) {
                                                                                            matchFailed("\"[AU]\"");
                                                                                          }
                                                                                        }
                                                                                        if (result0 === null) {
                                                                                          if (input.substr(pos, 11) === "[Amb'a'1'U]") {
                                                                                            result0 = "[Amb'a'1'U]";
                                                                                            pos += 11;
                                                                                          } else {
                                                                                            result0 = null;
                                                                                            if (reportFailures === 0) {
                                                                                              matchFailed("\"[Amb'a'1'U]\"");
                                                                                            }
                                                                                          }
                                                                                          if (result0 === null) {
                                                                                            if (input.substr(pos, 5) === "[PNU]") {
                                                                                              result0 = "[PNU]";
                                                                                              pos += 5;
                                                                                            } else {
                                                                                              result0 = null;
                                                                                              if (reportFailures === 0) {
                                                                                                matchFailed("\"[PNU]\"");
                                                                                              }
                                                                                            }
                                                                                            if (result0 === null) {
